--- a/Qui Som.html
+++ b/Qui Som.html
@@ -21,7 +21,7 @@
             Direcció.
         </p>
         <!--<img src="Assets/fotoNens.png"> -->
-        <img id="myImg" src="Assets/fotoNens.png" alt="Direcció" style="width:100%;max-width:300px">
+        <img id="myImg" src="Assets/fotoNens.png" alt="Direcció" style="width:100%;">
 
         <!-- The Modal -->
         <div id="myModal" class="modal">
