--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
                 </div> 
             <section>
                 <div class="btn">
-                    <a href="http://127.0.0.1:5500/Qui%20Som.html">QUI SOM?</a> 
+                    <a href="/QuiSom.html">QUI SOM?</a> 
                     <a href="https://www.ara.cat/ultima-hora/">ACTUALITAT</a>                    
                     <a href="https://www.ara.cat/cultura/">OCI</a>
                     <a href="https://es.ara.cat/cartas/">ESPORTS</a>
-                    <a href="http://127.0.0.1:5500/Form.html">CARTES AL DIRECTOR</a>
+                    <a href="/Form.html">CARTES AL DIRECTOR</a>
                 </div>
             </section>
         </body>
