--- a/index.html
+++ b/index.html
@@ -1,27 +1,94 @@
-
-    <head>
-        <link rel="stylesheet" href="index.css">
-        <title>SantjuRedRose | Inici</title>
-        <link href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Noto+Serif+Display&family=Source+Code+Pro&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" type="iamge/png" href="Assets/RedRose.png">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-    </head>
-        <body>
-                <div>
-                    <h1><img src="Assets/h1.png"></h1>
-                </div> 
-            <section>
-                <div class="btn">
-                    <a href="/QuiSom.html">QUI SOM?</a> 
-                    <a href="https://www.ara.cat/ultima-hora/">ACTUALITAT</a>                    
-                    <a href="https://www.ara.cat/cultura/">OCI</a>
-                    <a href="https://es.ara.cat/cartas/">ESPORTS</a>
-                    <a href="/Form.html">CARTES AL DIRECTOR</a>
-                </div>
-            </section>
-        </body>
+<head>
+    <link rel="stylesheet" href="index.css">
+    <title>SantjuRedRose | Inici</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Noto+Serif+Display&family=Source+Code+Pro&display=swap"
+        rel="stylesheet">
+    <link rel="shortcut icon" type="iamge/png" href="Assets/RedRose.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+</head>
 
 
- 
+<body>
+    <div class="gcontainer"></div>
+    <div>
+        <h1><img src="Assets/h1.png"></h1>
+    </div>
+    <section>
+        <div class="btn">
+            <a href="/QuiSom.html">QUI SOM?</a>
+            <a href="https://www.ara.cat/ultima-hora/">ACTUALITAT</a>
+            <a href="https://www.ara.cat/cultura/">OCI</a>
+            <a href="https://es.ara.cat/cartas/">ESPORTS</a>
+            <a href="/Form.html">CARTES AL DIRECTOR</a>
+        </div>
+    </section>
+
+    <!--first photo + text-->
+
+    <div>
+        <div class="wrap">
+            <div class="imagebox">
+                <img class="n"
+                    src="https://images.pexels.com/photos/1525041/pexels-photo-1525041.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                    width="100%" height="auto" />
+            </div>
+
+            <div class="textbox">
+                <h2>Title Here</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
+                <a href="#">Read More</a>
+            </div>
+        </div>
+    </div>
+
+    <!--second photo + text-->
+
+    <div>
+        <div class="wrap" style="margin-top: 7%;">
+            <div class="textbox">
+                <h2>Title Here</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
+                <a href="#">Read More</a>
+            </div>
+
+            <div class="imagebox">
+                <div class="imagebox">
+                    <img class="n" src="https://www.sony.es/image/bc6d25fa6371c2899ce704a2bed7614c?fmt=png-alpha&wid=960" width="100%"height="auto" />
+            </div>
+        </div>
+    </div>
+
+    <!--third photo + text-->
+
+    <div>
+        <div class="wrap" style="margin-top: 7%; margin-bottom: 7%;">
+            <div class="imagebox">
+                <img class="n"
+                    src="https://images.pexels.com/photos/842711/pexels-photo-842711.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                    width="100%" height="auto" />
+            </div>
+
+            <div class="textbox">
+                <h2>Title Here</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
+                <a href="#">Read More</a>
+            </div>
+        </div>
+    </div>
+
+    <br>
+    <br>
+    <!--Bottom-->
+
+    <img class="btm" src="Assets/bottom.png">
+
+</body>
