--- a/QuiSom.html
+++ b/QuiSom.html
@@ -10,6 +10,12 @@
     <link rel="shortcut icon" type="iamge/png" href="Assets/RedRose.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500&display=swap" rel="stylesheet">
 </head>
+
+<video autoplay muted loop id="myVideo">
+    <source src="Assets/video.mp4" type="video/mp4">
+    Your browser does not support HTML5 video.
+  </video>
+
 <body>
     <div>
         <h1>QUI SOM?</h1>
@@ -17,9 +23,9 @@
     <div class="pt">
         <p>
             Som els alumnes de 3r d'ESO del Col.legi El Roser. Aquest any hem utilitzat una hora de castellà per dur a terme una idea que ens va proposar la nostra  professora de llengua. Aquesta consisteix en fer un diari proper,  dirigit a tothom, que reculli les preocupacions i els interessos de la gent de la comarca, però, en especial, els de la gent jove. 
-            La Direcció del diari aposta per una informació atractiva, d'interès i, sobretot, nostra.<br>           
-            Direcció.
+            La Direcció del diari aposta per una informació atractiva, d'interès i, sobretot, nostra.
         </p>
+        <br>
         <!--<img src="Assets/fotoNens.png"> -->
         <img id="myImg" src="Assets/fotoNens.png" alt="Direcció" style="width:100%;">
 
