--- a/index.html
+++ b/index.html
@@ -85,10 +85,15 @@
         </div>
     </div>
 
-    <br>
-    <br>
-    <!--Bottom-->
+    
+    <!--footer-->
 
-    <img class="btm" src="Assets/bottom.png">
+    <footer>
+        <div>
+            <a href="#" class="f1">SANTJU RED ROSE</a><br><br>
+            <a href="QuiSom.html" class="f1">Qui som?</a>
+            <p class="f1">Designed by <a style="color: black;" href="https://github.com/sharpshifter2">collez</a></p>
+        </div>
+    </footer>
 
 </body>
