--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
-                <a href="#">Read More</a>
+                <a style="color: white;" href="#">ATUALITAT</a>
             </div>
         </div>
     </div>
@@ -55,45 +55,53 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
-                <a href="#">Read More</a>
+                <a style="color: white;" href="#">ESPORTS</a>
             </div>
 
             <div class="imagebox">
                 <div class="imagebox">
-                    <img class="n" src="https://www.sony.es/image/bc6d25fa6371c2899ce704a2bed7614c?fmt=png-alpha&wid=960" width="100%"height="auto" />
+                    <img class="n"
+                        src="https://www.sony.es/image/bc6d25fa6371c2899ce704a2bed7614c?fmt=png-alpha&wid=960"
+                        width="100%" height="auto" />
+                </div>
             </div>
         </div>
-    </div>
 
-    <!--third photo + text-->
+        <!--third photo + text-->
 
-    <div>
-        <div class="wrap" style="margin-top: 7%; margin-bottom: 7%;">
-            <div class="imagebox">
-                <img class="n"
-                    src="https://images.pexels.com/photos/842711/pexels-photo-842711.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                    width="100%" height="auto" />
-            </div>
-
-            <div class="textbox">
-                <h2>Title Here</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
-                <a href="#">Read More</a>
-            </div>
-        </div>
-    </div>
-
-    
-    <!--footer-->
-
-    <footer>
         <div>
-            <a href="#" class="f1">SANTJU RED ROSE</a><br><br>
-            <a href="QuiSom.html" class="f1">Qui som?</a>
-            <p class="f1">Designed by <a style="color: black;" href="https://github.com/sharpshifter2">collez</a></p>
+            <div class="wrap" style="margin-top: 7%; margin-bottom: 7%;">
+                <div class="imagebox">
+                    <img class="n"
+                        src="https://images.pexels.com/photos/842711/pexels-photo-842711.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                        width="100%" height="auto" />
+                </div>
+
+                <div class="textbox">
+                    <h2>Title Here</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat.</p>
+                    <a style="color: white;" href="#">OCI</a>
+                </div>
+            </div>
         </div>
-    </footer>
+
+
+        <!--footer-->
+
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col">
+                        <a href="#" class="f1">SANTJU RED ROSE</a><br><br>
+                        <a href="QuiSom.html" class="f1">Qui som?</a>
+                        <p class="f1">Designed by <a style="color: black;"href="https://github.com/sharpshifter2">collez</a></p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
 </body>
