--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="row">
                     <div class="footer-col">
                         <a href="#" class="f1">SANTJU RED ROSE</a><br><br>
-                        <a href="QuiSom.html" class="f1">Qui som?</a>
+                        <a href="Form.html" class="f1">Envia una carta!</a>
                         <p class="f1">Designed by <a style="color: black;"href="https://github.com/sharpshifter2">collez</a></p>
                     </div>
                 </div>
