--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="https://www.ara.cat/ultima-hora/">ACTUALITAT</a>
             <a href="https://www.ara.cat/cultura/">OCI</a>
             <a href="https://es.ara.cat/cartas/">ESPORTS</a>
-            <a href="/Form.html">CARTES AL DIRECTOR</a>
+            <a href="/form.html">CARTES AL DIRECTOR</a>
         </div>
     </section>
 
