--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="https://www.ara.cat/ultima-hora/">ACTUALITAT</a>
             <a href="https://www.ara.cat/cultura/">OCI</a>
             <a href="https://es.ara.cat/cartas/">ESPORTS</a>
-            <a href="/form.html">CARTES AL DIRECTOR</a>
+            <a href="/Form.html">CARTES AL DIRECTOR</a>
         </div>
     </section>
 
@@ -32,16 +32,14 @@
         <div class="wrap">
             <div class="imagebox">
                 <img class="n"
-                    src="https://images.pexels.com/photos/1525041/pexels-photo-1525041.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                    src="Assets/Fontanals.jpg"
                     width="100%" height="auto" />
             </div>
 
             <div class="textbox">
-                <h2>Title Here</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
-                <a style="color: white;" href="#">ATUALITAT</a>
+                <h2>INFORMACIÓ SOBRE QUÈ FER DESPRÉS DE L’ESO</h2>
+                <p>Abans de prendre la decisió sobre què vols fer després de l’ESO, has de reflexionar bé sobre quina mena de futur et vols crear. Per tant,  quan acabes 4t et trobes en un dels moments més importants de la teva vida. Convé, doncs, pensar bé en el camí que escolliràs. Així doncs, quines opcions se’t presenten després de l’ESO?</p>
+                <a style="color: rgba(202, 202, 53, 0.895);" href="#">ACTUALITAT</a>
             </div>
         </div>
     </div>
@@ -51,17 +49,17 @@
     <div>
         <div class="wrap" style="margin-top: 7%;">
             <div class="textbox">
-                <h2>Title Here</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
-                <a style="color: white;" href="#">ESPORTS</a>
+                <h2>MÉS QUE UN BON PORTER</h2>
+                <p>“Arnau Morera un vilatortí nascut l’any 2008”<br>
+                    La setmana passada vam tenir la sort de poder entrevistar a l’Arnau Morera.                               En aquesta entrevista l’Arnau ens va explicar com es ell a dins i a fora del camp i vàrem tenir l’honor de conèixe’l més.
+                    </p>
+                <a style="color: rgba(202, 202, 53, 0.895);;" href="#">ESPORTS</a>
             </div>
 
             <div class="imagebox">
                 <div class="imagebox">
                     <img class="n"
-                        src="https://www.sony.es/image/bc6d25fa6371c2899ce704a2bed7614c?fmt=png-alpha&wid=960"
+                        src="Assets/Morera porter.jpg"
                         width="100%" height="auto" />
                 </div>
             </div>
@@ -84,7 +82,7 @@
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
                         ut
                         aliquip ex ea commodo consequat.</p>
-                    <a style="color: white;" href="#">OCI</a>
+                    <a style="color: rgba(202, 202, 53, 0.895);;" href="#">OCI</a>
                 </div>
             </div>
         </div>
