--- a/Form.html
+++ b/Form.html
@@ -4,23 +4,33 @@
     <link rel="shortcut icon" type="iamge/png" href="Assets/RedRose.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500&display=swap"
+        rel="stylesheet">
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 </head>
+
 <body>
     <form action="/" method="post" id="contactForm">
         <img src="Assets/form header.png">
         <h5>FES UNA CARTA</h5>
-        <hr>    
-    <br> 
-    <br>     
+        <hr>
+        <br>
+        <br>
         <div class="Text">
             <p><input type="text" name="nom" placeholder="Nom i Cognom:" id="nom"></p><br>
             <p><textarea cols=50 rows=8 name="text" placeholder="Fes una Carta:" id="text"></textarea></p>
-            <div class="btn"><input type="submit" value="Enviar" name="send"></div><br>
+            <table width="400">
+                <tr>
+                    <td>
+                        <div class="btn"><input type="submit" value="Enviar" name="send"></div><br>
+                    </td>
+                    <td>
+                        <a>INFO</a>
+                    </td>
+                </tr>
+            </table>
         </div>
     </form>
 </body>
-
