--- a/QuiSom.html
+++ b/QuiSom.html
@@ -14,8 +14,12 @@
 
 
 <body>
-    <div>
-        <h1>QUI SOM?</h1>
+    <div class="gcontainer"></div>
+
+    <div class="bk">
+        <h1><img src="Assets/h1.png"></h1>   
+        <h2>QUI SOM?</h2>
+        <h3>f</h3>
     </div>
     <div class="pt">
         <p>
@@ -33,6 +37,18 @@
         <div id="caption"></div>
         </div>
     </div>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <a href="#" class="f1">SANTJU RED ROSE</a><br><br>
+                    <a href="Form.html" class="f1">Envia una carta!</a>
+                    <p class="f1">Designed by <a style="color: red;"href="https://github.com/sharpshifter2">collez</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
