UPDATE info form

--- a/Form.html
+++ b/Form.html
@@ -26,8 +26,8 @@
                     <td>
                         <div class="btn"><input type="submit" value="Enviar" name="send"></div><br>
                     </td>
-                    <td>
-                        <a>INFO</a>
+                    <td class="info">
+                        <a href="/info.html">Clica per veure les respostes</a>
                     </td>
                 </tr>
             </table>
