--- a/info.html
+++ b/info.html
@@ -4,6 +4,7 @@
     <title>SantjuRedRose | Info</title>
 </head>
 <body>
+    <div class="gcontainer"></div>
     <div class="bk">
         <h1><img src="Assets/h1.png"></h1>   
         <h2>RESPOSTES CARTES</h2>
