--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="textbox">
                 <h2>INFORMACIÓ SOBRE QUÈ FER DESPRÉS DE L’ESO</h2>
                 <p>Abans de prendre la decisió sobre què vols fer després de l’ESO, has de reflexionar bé sobre quina mena de futur et vols crear. Per tant,  quan acabes 4t et trobes en un dels moments més importants de la teva vida. Convé, doncs, pensar bé en el camí que escolliràs. Així doncs, quines opcions se’t presenten després de l’ESO?</p>
-                <a style="color: white;" href="#">ACTUALITAT</a>
+                <a style="color: white;" href="actualitat.html">ACTUALITAT</a>
             </div>
         </div>
     </div>
@@ -70,14 +70,14 @@
             <div class="wrap" style="margin-top: 7%;">
                 <div class="imagebox">
                     <img class="n"
-                        src="Assets/uncharted.jpg"
+                        src="https://i.blogs.es/09a281/uncharted400/1366_2000.jpg"
                         width="100%" height="auto" />
                 </div>
 
                 <div class="textbox">
                     <h2>VIDEOJOCS</h2>
                     <p>De tots els jocs que hi ha actualment, els més populars, exitosos i amb més expectatives entres els jugadors durant aquest últim any són Uncharted, Gta5, Assassins creed IV, Battlefront 2 i Sea of thieves. A continuació en farem una valoració d’aquests:</p>
-                    <a style="color: white;" href="#">OCI</a>
+                    <a style="color: white;" href="oci.html">OCI</a>
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
                     <p>“Arnau Morera un vilatortí nascut l’any 2008”<br>
                         La setmana passada vam tenir la sort de poder entrevistar a l’Arnau Morera.                               En aquesta entrevista l’Arnau ens va explicar com es ell a dins i a fora del camp i vàrem tenir l’honor de conèixe’l més.
                         </p>
-                    <a style="color: white;" href="#">ESPORTS</a>
+                    <a style="color: white;" href="esports.html">ESPORTS</a>
                 </div>
     
                 <div class="imagebox">
