--- a/Form.html
+++ b/Form.html
@@ -20,7 +20,7 @@
             <table width="400">
                 <tr>
                     <td>
-                        <div class="btn"><input type="submit" value="Enviar" name="send" onclick="main();"></div><br>
+                        <div class="btn"><input type="submit" value="Enviar" onclick="main();"></div><br>
                     </td>
                     <td class="info">
                         <a href="/info.html">Clica per veure les respostes</a>
