--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="/actualitat.html">ACTUALITAT</a>
             <a href="/oci.html">OCI</a>
             <a href="/esports.html">ESPORTS</a>
-            <a href="/Form.html">CARTES AL DIRECTOR</a>
+            <a href="/info.html">CARTES AL DIRECTOR</a>
         </div>
     </section>
 
@@ -48,11 +48,11 @@
     <div>
         <div class="wrap" style="margin-top: 7%; margin-bottom: 7%;">
             <div class="textbox">
-                <h2>LES TEVES OPINIONS SÓN IMPORTANTS, explica'ns-les</h2>
+                <h2 style="font-size: 22px;">LES TEVES OPINIONS SÓN IMPORTANTS, EXPLCICA'NS-LES</h2>
                 <p><br>
                     
                     </p>
-                <a href="Form.html"class="btnc">CLICA AQUI PER ESCRIURE LA TEVA CARTA</a>
+                <a href="mailto:diariroser3@gmail.com"class="btnc">Clica aqui per enviar-nos una carta.</a>
             </div>
 
             <div class="imagebox">
