--- a/info.html
+++ b/info.html
@@ -13,6 +13,8 @@
 
 
     <p>
-        Esperant preguntes...
+        Esperant cartas...
     </p>
+    <a href="mailto:diariroser3@gmail.com"class="btnc">Clica aqui per enviar-nos una carta.</a>
+
 </body>
